--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@ body {
         font-weight: 700;
         letter-spacing: 2%;
         line-height: 27px;
-        src: url("/fonts/Melodrama-Variable.woff2") format("woff2");
+        src: url("./fonts/Melodrama-Variable.woff2") format("woff2");
     }
     .logo-app-streaming {
         width: clamp(5.5rem, 20vw, 9rem);
@@ -61,7 +61,7 @@ body {
         line-height: 105px;
         letter-spacing: 2%;
         font-weight: 400;
-        src: url("/fonts/GarciaMarquez.otf") format("openType");
+        src: url("./fonts/GarciaMarquez.otf") format("openType");
     }
 
     .scale-125 {
