--- a/app/globals.css
+++ b/app/globals.css
@@ -15,11 +15,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 body {
     box-sizing: border-box;
@@ -47,7 +46,7 @@ body {
         font-weight: 700;
         letter-spacing: 2%;
         line-height: 27px;
-        src: url("./fonts/Melodrama-Variable.woff2") format("woff2");
+        src: url("/fonts/Melodrama-Variable.woff2") format("woff2");
     }
     .logo-app-streaming {
         width: clamp(5.5rem, 20vw, 9rem);
@@ -61,7 +60,7 @@ body {
         line-height: 105px;
         letter-spacing: 2%;
         font-weight: 400;
-        src: url("./fonts/GarciaMarquez.otf") format("openType");
+        src: url("/fonts/GarciaMarquez.otf") format("openType");
     }
 
     .scale-125 {
