--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,17 @@ body {
     box-sizing: border-box;
     width: 100vw;
 }
+html {
+    scroll-behavior: smooth;
+}
+/* [id^="cover"]::before {
+    content: "";
+    display: block;
+    height: 100px;
+    margin-top: -100px;
+    visibility: hidden;
+    pointer-events: none;
+} */
 
 @layer base {
     @font-face {
