chore: Update components.tsx to export LogoWithName component

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@
 body {
     box-sizing: border-box;
     width: 100vw;
+    /* overflow-x: hidden; */
 }
 html {
     scroll-behavior: smooth;
@@ -35,17 +36,43 @@ html {
     visibility: hidden;
     pointer-events: none;
 } */
-
+.deezer,
+.spotify,
+.apple-music {
+    transition: all 1s ease-in-out;
+}
+.spotify:hover {
+    background: rgb(55, 77, 29);
+    background: radial-gradient(circle, rgba(55, 77, 29, 0.7) 0%, rgba(73, 102, 39, 0.7) 100%);
+    transition: all 1s ease-in-out;
+}
+.deezer:hover {
+    transition: color 0.3s;
+    background: rgb(134, 101, 3);
+    background: linear-gradient(
+        127deg,
+        rgba(134, 101, 3, 1) 0%,
+        rgba(225, 81, 45, 1) 24%,
+        rgba(183, 57, 155, 1) 46%,
+        rgba(74, 146, 211, 1) 65%,
+        rgba(115, 87, 3, 1) 100%
+    );
+}
+.apple-music:hover {
+    transition: color 0.3s;
+    background: rgb(117, 117, 117);
+    background: radial-gradient(circle, rgba(117, 117, 117, 1) 0%, rgba(82, 82, 82, 1) 50%, rgba(51, 51, 51, 1) 100%);
+}
+.text-cover {
+    font-size: clamp(1.2rem, 2.5vw, 3rem);
+}
 @layer base {
-    
     .logo-app-streaming {
-        width: clamp(5.5rem, 20vw, 9rem);
+        width: clamp(5rem, 15vw, 6.5rem);
     }
     h1 {
-        font-size: clamp(1.6rem, 7vw, 4rem);
+        font-size: clamp(1.7rem, 7vw, 4rem);
     }
-
-    
 
     .scale-125 {
         @apply transition-transform duration-500 ease-in-out;
