--- a/app/globals.css
+++ b/app/globals.css
@@ -39,17 +39,15 @@ html {
 .deezer,
 .spotify,
 .apple-music {
-    transition: all 1s ease-in-out;
+    transition: all 250ms ease-in-out;
 }
 .spotify:hover {
     background: rgb(55, 77, 29);
-    background: radial-gradient(circle, rgba(55, 77, 29, 0.7) 0%, rgba(73, 102, 39, 0.7) 100%);
-    transition: all 1s ease-in-out;
+    background-image: radial-gradient(circle, rgba(55, 77, 29, 0.7) 0%, rgba(73, 102, 39, 0.7) 100%);
 }
 .deezer:hover {
-    transition: color 0.3s;
     background: rgb(134, 101, 3);
-    background: linear-gradient(
+    background-image: linear-gradient(
         127deg,
         rgba(134, 101, 3, 1) 0%,
         rgba(225, 81, 45, 1) 24%,
@@ -59,10 +57,10 @@ html {
     );
 }
 .apple-music:hover {
-    transition: color 0.3s;
     background: rgb(117, 117, 117);
-    background: radial-gradient(circle, rgba(117, 117, 117, 1) 0%, rgba(82, 82, 82, 1) 50%, rgba(51, 51, 51, 1) 100%);
+    background-image: radial-gradient(circle, rgba(117, 117, 117, 1) 0%, rgba(82, 82, 82, 1) 50%, rgba(51, 51, 51, 1) 100%);
 }
+
 .text-cover {
     font-size: clamp(1.2rem, 2.5vw, 3rem);
 }
