--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,6 @@ html {
     scroll-behavior: smooth;
     max-width: 100svw;
     width: 100svw;
-     /* overflow-x: hidden; */
 }
 /* [id^="cover"]::before {
     content: "";
@@ -66,7 +65,7 @@ html {
 }
 
 .text-cover {
-    font-size: clamp(1.2rem, 2.5vw, 3rem);
+    font-size: clamp(1.2rem, 1rem + 2.5vw, 3rem);
 }
 @layer base {
     .logo-app-streaming {
