--- a/app/globals.css
+++ b/app/globals.css
@@ -71,8 +71,15 @@ html {
     .logo-app-streaming {
         width: clamp(5rem, 15vw, 6.5rem);
     }
-    h1 {
-        font-size: clamp(1.7rem, 7vw, 4rem);
+    @media screen and (min-width: 768px) {
+        h1 {
+            font-size: clamp(1.7rem, 6vw, 5rem);
+        }
+    }
+    @media screen and (max-width: 768px) {
+        h1 {
+            font-size: clamp(1.7rem, 7vw, 5rem);
+        }
     }
 
     .scale-125 {
